unsquishes the Event Review page rows for The Problems, UI, issue 2

--- a/ionic/senseus/www/static/css/event.css
+++ b/ionic/senseus/www/static/css/event.css
@@ -319,7 +319,7 @@ border-color: red;
 }
 
 .flex-row, .p0 {
-  padding:0;
+  padding: 10px;
 }
 
 .pl1, #event-type-container .item-content {
